--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="wrap">
 		<div class="img_bg"></div>
 		<div class="topbar cute_english_title">
-			<a href="#" class="logo jq_btn_home"><h1>HUI</h1></a>
+			<a href="#" class="logo jq_btn_home animated flipOutY"><h1>HUI</h1></a>
 			<a href="#" class="btn_bar jq_btn_bar">
 				<i class="fas fa-bars" aria-hidden="true"></i>
 			</a>
