--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						</a>
 						<h3 class="jq_hideTop">BMI計算機</h3>
 						
-						<div class="works_content jq_flipInY animated">
+						<div class="works_content jq_flipInY">
 							<a href="#" class="works_close jq_close_works"><i class="fas fa-times"></i></a>
 							<h2>BMI計算機</h2>
 							<ul class="works_skill">
@@ -119,7 +119,7 @@
 						</a>
 						<h3 class="jq_hideTop">高雄旅遊資訊</h3>
 
-						<div class="works_content jq_flipInY animated">
+						<div class="works_content jq_flipInY">
 							<a href="#" class="works_close jq_close_works"><i class="fas fa-times"></i></a>
 							<h2>高雄旅遊資訊</h2>
 							<ul class="works_skill">
