--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="wrap">
-		
+		<div class="img_bg"></div>
 		<div class="topbar cute_english_title">
 			<a href="#" class="logo jq_btn_home"><h1>HUI</h1></a>
 			<a href="#" class="btn_bar jq_btn_bar">
